add link to performance report
--HG--
branch : perf_1203

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -22,6 +22,9 @@
     <li>
       <a href="reports/usage">Who's Using HERON?</a>
     </li>
+    <li>
+      <a href="reports/performance">How busy is HERON?</a>
+    </li>
   </ul>
   </div>
 
