fix test for Investigator Request template section to include executives (#1378)
--HG--
branch : exec_1378

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -39,7 +39,8 @@
   </ul>
   </div>
 
-  <div py:if="faculty" class="header png"><h3>Investigator Requests</h3>
+  <div py:if="sponsorship_path" class="header png">
+    <h3>Investigator Requests</h3>
   <ul>
     <li><a href="${sponsorship_path}">HERON
     Sponsorship Request</a>
