oops... this isn't PHP. testing unbound variables (sponsorship_path) throws an exception
--HG--
branch : exec_1378

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -39,7 +39,7 @@
   </ul>
   </div>
 
-  <div py:if="sponsorship_path" class="header png">
+  <div py:if="affiliate.is_investigator()" class="header png">
     <h3>Investigator Requests</h3>
   <ul>
     <li><a href="${sponsorship_path}">HERON
