See ticket 2413.  Updated clinic information.  Added CTSA citing information. Removed CRIS link.

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -103,29 +103,24 @@
     <li><a href="http://frontiersresearch.org/frontiers/data-set-instructions">extract
     data sets</a></li>
   </ul>
+  
+  <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>). 
+  </p>
 
   <div><h2>Support and Feedback</h2>
 
-  <p>The <a href=
-  "http://informatics.kumc.edu/work/blog/2011/07/first-clinic"
-  >Frontiers Clinical and Translational Informatics Clinic</a> meets every
-  other Tuesday for investigators needing assistance using informatics
-  tools for data exploration, cohort discovery, and data collection.
-  The clinic is a brainstorming session and an education forum for
-  investigators and informatics to share knowledge, provide feedback,
-  and optimize the use of systems.  <em>See the <a
-  href="http://www.kumc.edu/events-calendar.html">KUMC Calendar</a> for the date of the next clinic.</em>
-</p>
+  <p>The Frontiers Lunch and Learn meets the 1st and 3rd Tuesdays of each month from 12:00 - 1:30 PM in room 3001D Student Center.  This training clinic provides assistance for investigators using informatics tools, such as HERON or REDCap, for data exploration, cohort discovery, and data collection. The clinic is a brainstorming session and an education forum for investigators and informatics to share knowledge, provide feedback, and optimize the use of systems.  <a href="https://redcap.kumc.edu/surveys/?s=L72oqA">Register</a> in advance if possible but drop-ins are welcome. <em>See the <a href="http://www.kumc.edu/events-calendar.html">KUMC Calendar</a> for the date of the next clinic.</em> 
+  </p>
 
   <p>To set up consultation regarding your project, complete an
-  <a href="http://frontiersresearch.org/reqroute/services/request_type/2"
-     >Informatics Project Request</a> (check Informatics project).
+  <a href="https://redcap.kumc.edu/surveys/?s=qYxMmb"
+     >Informatics Project Request</a> (check Other Medical Informatics Requests).
   </p>
   </div>
   
   <p>Feel free to send questions and concerns to <a
   href="mailto:${admin_mailbox}" >${admin_mailbox}</a>.</p>
-
+  
   <p><small><a href="#heron-tricol-01">photo</a> credit:
   <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw"
      >Christopher Harshaw</a></small>
@@ -200,7 +195,6 @@
       </div>
       <div class="content png">
         <ul class="links">
-          <li><a href="http://biostatistics.kumc.edu/bio_proj_cris.shtml">CRIS</a></li>
           <li><a href="https://redcap.kumc.edu/">REDCap</a></li>
         </ul>
         
