--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -20,15 +20,15 @@ ${'approved' if approved else 'rejected'}
 <py:if test='approved'>
   <p>They may log in to <a href="${heron_home}">HERON</a>
   (<code>${heron_home}</code>).</p>
-  
-  <p>Visit the  <a href="frontiersresearch.org/frontiers/HERON-Introduction">HERON help page</a> or view <a href="http://frontiersresearch.org/frontiers/informatics-training-videos">HERON training videos</a> for more information on accessing and searching HERON.</p>
-
-  <p><strong>Note:</strong> For access from outside the KUMC network,
+   
+  <p>Visit the  <a href="frontiersresearch.org/frontiers/HERON-Introduction">HERON help page</a> or view <a href="http://frontiersresearch.org/frontiers/informatics-training-videos">HERON training videos</a> for more information on accessing and searching HERON.  For access from outside the KUMC network,
   a <a href=
   "http://www.kumc.edu/information-resources/virtual-private-network.html"
-  >KUMC VPN connection</a> is required.</p>
+  >KUMC VPN connection</a> is required. </p>
 
-  <p>They will be required to sign a system access agreement if they
+  <p><strong>Note:</strong> any publication that results from a project utilizing HERON should <a href="http://frontiersresearch.org/frontiers/citing-frontiers-support">cite</a> grant support (<strong>CTSA Award # UL1TR000001</strong>).</p>
+
+  <p>HERON users will be required to sign a system access agreement if they
   have not already done so for another project.</p>
 
   <p>If you have any questions, feel free to email
