--- a/heron_wsgi/templates/kumc_layout.xml
+++ b/heron_wsgi/templates/kumc_layout.xml
@@ -5,7 +5,7 @@
 
   <link rel="stylesheet" type="text/css" href=
   "https://www.kumc.edu/css/template2009/ku-sec.css" />
-  <link rel="shortcut icon" href="http://www.ku.edu/favicon.ico" />
+  <link rel="shortcut icon" href="https://www.ku.edu/favicon.ico" />
   <script src=
   "https://www.kumc.edu/js/jquery/jquery-1.3.2/jquery-1.3.2.min.js"
   type="text/javascript">
