Added DUA text and link to the DROC approval email.
--HG--
branch : dua_3018

--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -31,6 +31,8 @@ ${'approved' if approved else 'rejected'}
   <p>HERON users will be required to sign a system access agreement if they
   have not already done so for another project.</p>
 
+  <p>For each study approved by the Data Request Oversight Committe (DROC) all study team members are required to sign the HERON Data Use Agreement before extract data can be released. To do so, login to <a href="${heron_home}">HERON</a> and follow the Data Use Agreement instructions.</p>
+
   <p>If you have any questions, feel free to email
   <a href="mailto:heron-admin@kumc.edu">heron-admin@kumc.edu</a>.</p>
 </py:if>
