Added dua_path var to CheckListView and index.html.
--HG--
branch : dua_3018

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -183,7 +183,7 @@
     <h3>Data Use Agreement</h3>
   </div>
   <div class="content png">
-    <p>The <a href="#dua_path">HERON Data Use Agreement</a> must be signed by all study team members before extract data can be released.</p>
+    <p>The <a href="${dua_path}">HERON Data Use Agreement</a> must be signed by all study team members before extract data can be released.</p>
   </div>
 
   <div class="header png">
