--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -104,8 +104,26 @@
     data sets</a></li>
   </ul>
   
-  <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>). 
+  <div><h2>Citing HERON</h2>
+
+  <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>) and <strong>HERON</strong>:</p>
+
+  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
+    Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.
+  </a></em><br/>
+  Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
+  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.<br/>
   </p>
+
+  <p>Publications referencing <strong>HERON</strong> and the <strong>Greater Plains Collaborative</strong> (GPC) should also cite the GPC:</p>
+
+  <p><em><a href="http://jamia.bmj.com/content/21/4/637.full">
+    The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></em><br/>
+  Lemuel R Waitman, Lauren S Aaronson, Prakash M Nadkarni, Daniel W Connolly, James R Campbell<br/>
+  J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756<br/>
+  </p>
+
+  </div>
 
   <div><h2>Support and Feedback</h2>
 
