When human subjects training is not OK, show course name and dates   - Status.current_training, expired_training go from string date to record   - MedCenter.latest_training() returns record; replaces trained_thru()
--HG--
branch : citi_2760

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -191,11 +191,19 @@
       </li>
     </ol>
 
-    <p py:if="not trainingCurrent">
+    <div py:if="not trainingCurrent">
+      <h3>Human Subjects Training</h3>
+      <p py:if="trainingLast">
+        Our records show <cite>${trainingLast.course}</cite>
+        completed ${trainingLast.completed};
+        <br />expired  ${trainingLast.expired}
+      </p>
+      <p>
       <em id="training-records">*If you believe the records of your training are out of date,
       please contact <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records"
       >${admin_mailbox}</a>.</em>
-    </p>
+      </p>
+    </div>
 
   <div class="header png">
     <h3>Data Use Agreement</h3>
