word-smith re training records
per meeting on May 8 (Karen, Diane, and Tamara)

--HG--
branch : citi_2760

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -203,8 +203,7 @@
           <br />expired  ${trainingLast.expired}.</strong>
       </p>
       <p py:if="not trainingCurrent">
-      <em id="training-records">*If you believe the records of your training are out of date,
-      please contact <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records"
+      <em id="training-records">*If you believe there is an error in your training records, please contact <a href="mailto:${admin_mailbox}?subject=HSC%20training%20records"
       >${admin_mailbox}</a>.</em>
       </p>
     </div>
