Added additional citation to HERON Admin landing page.
--HG--
branch : citation_2835

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -115,6 +115,13 @@
   AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.<br/>
   </p>
 
+  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/20190053">
+    Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2). 
+  </a></em><br/>
+  Murphy SN, Weber G, Mendis M, Gainer V, Chueh HC, Churchill S, Kohane I.<br/>
+  J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.<br/>
+  </p>
+
   <p>Publications referencing <strong>HERON</strong> and the <strong>Greater Plains Collaborative</strong> (GPC) should also cite the GPC:</p>
 
   <p><em><a href="http://jamia.bmj.com/content/21/4/637.full">
