Added citation information to DUA approval email (#2321).
--HG--
branch : citation_2835

--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -33,6 +33,15 @@ ${'approved' if approved else 'rejected'}
 
   <p>For each study approved by the Data Request Oversight Committe (DROC) all study team members are required to sign the HERON Data Use Agreement before extract data can be released. To do so, login to <a href="${heron_home}">HERON</a> and follow the Data Use Agreement instructions.</p>
 
+  <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>) and <strong>HERON</strong>:</p>
+
+  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
+    Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.
+  </a></em><br/>
+  Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
+  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.<br/>
+  </p>
+
   <p>If you have any questions, feel free to email
   <a href="mailto:heron-admin@kumc.edu">heron-admin@kumc.edu</a>.</p>
 </py:if>
