refine citation markup: use <cite> rather than <em>, <li> rather than <p>   - prune superfluous <br /> tags
--HG--
branch : citation_2835

--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -108,27 +108,31 @@
 
   <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>) and <strong>HERON</strong>:</p>
 
-  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
+  <ul>
+  <li><cite><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
     Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.
-  </a></em><br/>
+  </a></cite><br/>
   Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
-  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.<br/>
-  </p>
+  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
+  </li>
 
-  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/20190053">
+  <li><cite><a href="http://www.ncbi.nlm.nih.gov/pubmed/20190053">
     Serving the enterprise and beyond with informatics for integrating biology and the bedside (i2b2). 
-  </a></em><br/>
+  </a></cite><br/>
   Murphy SN, Weber G, Mendis M, Gainer V, Chueh HC, Churchill S, Kohane I.<br/>
-  J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.<br/>
-  </p>
+  J Am Med Inform Assoc. 2010 Mar-Apr;17(2):124-30. doi: 10.1136/jamia.2009.000893.
+  </li>
+  </ul>
 
   <p>Publications referencing <strong>HERON</strong> and the <strong>Greater Plains Collaborative</strong> (GPC) should also cite the GPC:</p>
 
-  <p><em><a href="http://jamia.bmj.com/content/21/4/637.full">
-    The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></em><br/>
+  <ul>
+  <li><cite><a href="http://jamia.bmj.com/content/21/4/637.full">
+    The Greater Plains Collaborative: a PCORnet Clinical Research Data Network</a></cite><br/>
   Lemuel R Waitman, Lauren S Aaronson, Prakash M Nadkarni, Daniel W Connolly, James R Campbell<br/>
-  J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756<br/>
-  </p>
+  J Am Med Inform Assoc 2014;21:637-641 doi:10.1136/amiajnl-2014-002756
+  </li>
+  </ul>
 
   </div>
 
