--- a/heron_wsgi/templates/drocnotice.html
+++ b/heron_wsgi/templates/drocnotice.html
@@ -35,12 +35,14 @@ ${'approved' if approved else 'rejected'}
 
   <p>Please note that any publication that results from a project utilizing HERON should cite grant support (<strong>CTSA Award # UL1TR000001</strong>) and <strong>HERON</strong>:</p>
 
-  <p><em><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
+  <ul>
+  <li><cite><a href="http://www.ncbi.nlm.nih.gov/pubmed/22195209">
     Expressing observations from electronic medical record flowsheets in an i2b2 based clinical data repository to support research and quality improvement.
-  </a></em><br/>
+  </a></cite><br/>
   Waitman LR1, Warren JJ, Manos EL, Connolly DW.<br/>
-  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.<br/>
-  </p>
+  AMIA Annu Symp Proc. 2011;2011:1454-63. Epub 2011 Oct 22.
+  </li>
+  </ul>
 
   <p>If you have any questions, feel free to email
   <a href="mailto:heron-admin@kumc.edu">heron-admin@kumc.edu</a>.</p>
