don't throw away current list of chosen uids when doing study team lookup
--HG--
branch : studyTeam_3502

--- a/heron_wsgi/templates/build_team.html
+++ b/heron_wsgi/templates/build_team.html
@@ -98,6 +98,7 @@ ${peopleTable(team, 'r')}
 <form method="get" action="">
 <p>Look up IRB protocol study team members:</p>
 <label>Study ID: <input name='studyId' size="20"/></label>
+<input type="hidden" name="uids" value="${uids}" />
 <input type="submit" name='goal' value="Lookup" />
 </form>
 
