--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -111,7 +111,7 @@
   <p>HERON (Healthcare Enterprise Repository for Ontological Narration) is a search discovery tool that allows KUMC faculty members to search de-identified data 
   from various hospital and medical center sources. By combining the various data sources, researchers can look at the data in new ways not available when viewing data in one source at a time. Data sources include but are not limited to:
   </p>  
-  <p>
+
   <table cellpadding = "30">
   <tr>
   <td valign = "top">
@@ -129,28 +129,28 @@
 	</ul>
   </td>
   <td align = "center" valign = "center">
-  <br><img src="av/220px-Heron_tricol_01.JPG" alt="">
-  <br><small>photo credit:
+  <br /><img src="av/220px-Heron_tricol_01.JPG" alt="" />
+  <br /><small>photo credit:
   <a href="http://commons.wikimedia.org/wiki/User:Chrharshaw"
      >Christopher Harshaw</a></small>
-  </p>
   </td>
   </tr>
   </table> 
-	</p>
+
   
   <div><h2>Reasons to use HERON</h2>
-  <p>
+
   <ol>
-	<li>Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria</li>
-		<ul><li>Useful for grant applications and feasibility counts</ul></li>
-	<li>Request de-identified datasets</li>
-		<ul> <li>No IRB approval needed </ul></li>
-	<li>Request identified datasets</li>
-		<ul> <li>Will require IRB approval or QI letter of determination from the IRB </ul></li>
-	<li>Receive data on patients in a research study </li>
-		<ul><li>Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</ul></li>
-	<li>Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
+	<li>Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
+		<ul><li>Useful for grant applications and feasibility counts</li></ul></li>
+	<li>Request de-identified datasets
+		<ul> <li>No IRB approval needed </li></ul></li>
+	<li>Request identified datasets
+		<ul> <li>Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
+	<li>Receive data on patients in a research study
+		<ul><li>Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
+		<li>Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
+  </ol>
 	</div>
 
  
@@ -189,7 +189,7 @@
   </div>
   
   <div><h2>More Information</h2>
-  <p><ul>
+  <ul>
 	<li>KUMC participates in the <a href = "http://www.gpcnetwork.org/" target = "_blank"> Greater Plains Collaborative (GPC) </a> which is a network of 12 leading medical centers in 8 states. The network brings together data on over 16 million patients. Investigators from KUMC are able to request data from participating sites. </li>
 	<li>Patient recruitment is possible through the <a href = "http://frontiersresearch.org/frontiers/participant-registry" target = "_blank"> Frontiers and Pioneers Research Registries</a>.</li>
 	<li>HERON data has been cited in several <a href="http://frontiersresearch.org/frontiers/node/452" target = "blank">publications</a>.</li>
@@ -203,6 +203,7 @@
   <p>Contact the clinical informatics coordinator at <a  href="mailto:${admin_mailbox}" >${admin_mailbox}</a> or call 913-588-7688.</p>
   
 
+  </div>
   </div>
 
   <div id="rightnav">
@@ -314,9 +315,6 @@
   </ul> 
       </div>
     </div>
-  <div>
-  </div>
-
 
 </body>
 </html>
