--- a/heron_wsgi/templates/index.html
+++ b/heron_wsgi/templates/index.html
@@ -9,15 +9,15 @@
 <!-- todo: consider passing admin_mailbox in from python -->
 <body py:with="admin_mailbox='heron-admin@kumc.edu'">
   <div id="menu">
-  <div class="header png"><h1>Use HERON Query and Analysis Tool</h1>
+  <div class="header png"><h2>Use HERON Query and Analysis Tool</h2>
   <ul>
     <li py:if="'checked' in repositoryAccess">
       <a href="${i2b2_login_path}"
-        ><font size = "5">Start HERON search</font></a>
+        ><font size = "4">Start HERON search</font></a>
     </li>
     <li py:if="'checked' not in repositoryAccess">
       <button disabled="disabled"
-        ><font size = "5">Start HERON search</font></button>
+        ><font size = "4">Start HERON search</font></button>
     </li>
   </ul>
   </div>
@@ -139,17 +139,19 @@
 
   
   <div><h2>Reasons to use HERON</h2>
-
-  <ol>
-	<li style="margin-top: 0">Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
-		<ul style="margin-top: 0"><li style="margin-top: 0">Useful for grant applications and feasibility counts</li></ul></li>
-	<li style="margin-top: 0">Request de-identified datasets
-		<ul style="margin-top: 0"> <li style="margin-top: 0">No IRB approval needed </li></ul></li>
-	<li style="margin-top: 0">Request identified datasets
-		<ul style="margin-top: 0"> <li style="margin-top: 0">Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
-	<li style="margin-top: 0">Receive data on patients in a research study
-		<ul style="margin-top: 0"><li style="margin-top: 0">Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
-	<li style="margin-top: 0">Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
+  <style>
+  ol.nomargin{margin:0 0 -1em 3em;}
+  </style>
+  <ol class = "nomargin">
+	<li>Search HERON to find the number of KUMC patients who meet inclusion/exclusion criteria
+		<ul><li>Useful for grant applications and feasibility counts</li></ul></li>
+	<li>Request de-identified datasets
+		<ul> <li>No IRB approval needed </li></ul></li>
+	<li>Request identified datasets
+		<ul> <li>Will require IRB approval or QI letter of determination from the IRB </li></ul></li>
+	<li>Receive data on patients in a research study
+		<ul><li>Please contact <a href ="mailto:heron-admin@kumc.edu" target = "_top">heron-admin@kumc.edu</a> to learn how to get data elements on a specific list of MRNs</li></ul></li>
+	<li>Receive contact information for patients in FRONTIERS registry who are eligible for your study </li>
   </ol>
 	</div>
 
